add tocs for api docs

--- a/docs/docs/03-Input/03-Command/API.mdx
+++ b/docs/docs/03-Input/03-Command/API.mdx
@@ -6,7 +6,32 @@
 import "github.com/aschey/bubbleprompt/input/commandinput"
 ```
 
-## Usage
+#### Index
+
+ - [type Arg](#Arg)
+ - [type CmdMetadata](#CmdMetadata)
+     - [func MetadataFromPositionalArgs(positionalArgs ...PositionalArg) CmdMetadata](#MetadataFromPositionalArgs)
+ - [type CmdMetadataAccessor](#CmdMetadataAccessor)
+ - [type Flag](#Flag)
+ - [type FlagFormatter](#FlagFormatter)
+ - [type FlagInput](#FlagInput)
+ - [type FlagPlaceholder](#FlagPlaceholder)
+ - [type FlagValueFormatter](#FlagValueFormatter)
+ - [type Formatters](#Formatters)
+     - [func DefaultFormatters() Formatters](#DefaultFormatters)
+ - [type Model](#Model)
+     - [func New[T CmdMetadataAccessor](opts ...Option[T]) *Model[T]](#New)
+ - [type Option](#Option)
+     - [func WithCursorMode[T CmdMetadataAccessor](cursorMode textinput.CursorMode) Option[T]](#WithCursorMode)
+     - [func WithDefaultDelimiter[T CmdMetadataAccessor](defaultDelimiter string) Option[T]](#WithDefaultDelimiter)
+     - [func WithFormatters[T CmdMetadataAccessor](formatters Formatters) Option[T]](#WithFormatters)
+     - [func WithPrompt[T CmdMetadataAccessor](prompt string) Option[T]](#WithPrompt)
+ - [type PositionalArg](#PositionalArg)
+ - [type PositionalArgFormatter](#PositionalArgFormatter)
+ - [type RoundingBehavior](#RoundingBehavior)
+ - [type Statement](#Statement)
+ - [type TokenPos](#TokenPos)
+ - [type TokenValue](#TokenValue)
 
 ```go
 var DefaultBoolFlagForeground = "13"
@@ -36,7 +61,7 @@ var DefaultPlaceholderForeground = "14"
 var DefaultSelectedTextColor = "10"
 ```
 
-#### type Arg
+#### type Arg() {#Arg}
 
 ```go
 type Arg struct {
@@ -46,7 +71,7 @@ type Arg struct {
 ```
 
 
-#### type CmdMetadata
+#### type CmdMetadata() {#CmdMetadata}
 
 ```go
 type CmdMetadata struct {
@@ -59,43 +84,43 @@ type CmdMetadata struct {
 ```
 
 
-#### func  MetadataFromPositionalArgs
+#### func MetadataFromPositionalArgs() {#MetadataFromPositionalArgs}
 
 ```go
 func MetadataFromPositionalArgs(positionalArgs ...PositionalArg) CmdMetadata
 ```
 
-#### func (CmdMetadata) GetFlagPlaceholder
+#### func (CmdMetadata) GetFlagPlaceholder() {#GetFlagPlaceholder}
 
 ```go
 func (m CmdMetadata) GetFlagPlaceholder() FlagPlaceholder
 ```
 
-#### func (CmdMetadata) GetLevel
+#### func (CmdMetadata) GetLevel() {#GetLevel}
 
 ```go
 func (m CmdMetadata) GetLevel() int
 ```
 
-#### func (CmdMetadata) GetPositionalArgs
+#### func (CmdMetadata) GetPositionalArgs() {#GetPositionalArgs}
 
 ```go
 func (m CmdMetadata) GetPositionalArgs() []PositionalArg
 ```
 
-#### func (CmdMetadata) GetPreservePlaceholder
+#### func (CmdMetadata) GetPreservePlaceholder() {#GetPreservePlaceholder}
 
 ```go
 func (m CmdMetadata) GetPreservePlaceholder() bool
 ```
 
-#### func (CmdMetadata) GetShowFlagPlaceholder
+#### func (CmdMetadata) GetShowFlagPlaceholder() {#GetShowFlagPlaceholder}
 
 ```go
 func (m CmdMetadata) GetShowFlagPlaceholder() bool
 ```
 
-#### type CmdMetadataAccessor
+#### type CmdMetadataAccessor() {#CmdMetadataAccessor}
 
 ```go
 type CmdMetadataAccessor interface {
@@ -108,7 +133,7 @@ type CmdMetadataAccessor interface {
 ```
 
 
-#### type Flag
+#### type Flag() {#Flag}
 
 ```go
 type Flag struct {
@@ -119,7 +144,7 @@ type Flag struct {
 ```
 
 
-#### type FlagFormatter
+#### type FlagFormatter() {#FlagFormatter}
 
 ```go
 type FlagFormatter struct {
@@ -129,7 +154,7 @@ type FlagFormatter struct {
 ```
 
 
-#### type FlagInput
+#### type FlagInput() {#FlagInput}
 
 ```go
 type FlagInput struct {
@@ -141,13 +166,13 @@ type FlagInput struct {
 ```
 
 
-#### func (FlagInput) RequiresArg
+#### func (FlagInput) RequiresArg() {#RequiresArg}
 
 ```go
 func (f FlagInput) RequiresArg() bool
 ```
 
-#### type FlagPlaceholder
+#### type FlagPlaceholder() {#FlagPlaceholder}
 
 ```go
 type FlagPlaceholder struct {
@@ -156,7 +181,7 @@ type FlagPlaceholder struct {
 ```
 
 
-#### type FlagValueFormatter
+#### type FlagValueFormatter() {#FlagValueFormatter}
 
 ```go
 type FlagValueFormatter struct {
@@ -167,7 +192,7 @@ type FlagValueFormatter struct {
 ```
 
 
-#### type Formatters
+#### type Formatters() {#Formatters}
 
 ```go
 type Formatters struct {
@@ -183,13 +208,13 @@ type Formatters struct {
 ```
 
 
-#### func  DefaultFormatters
+#### func DefaultFormatters() {#DefaultFormatters}
 
 ```go
 func DefaultFormatters() Formatters
 ```
 
-#### type Model
+#### type Model() {#Model}
 
 ```go
 type Model[T CmdMetadataAccessor] struct {
@@ -197,326 +222,326 @@ type Model[T CmdMetadataAccessor] struct {
 ```
 
 
-#### func  New
+#### func New() {#New}
 
 ```go
 func New[T CmdMetadataAccessor](opts ...Option[T]) *Model[T]
 ```
 
-#### func (Model[T]) AllTokensBeforeCursor
+#### func (Model[T]) AllTokensBeforeCursor() {#AllTokensBeforeCursor}
 
 ```go
 func (m Model[T]) AllTokensBeforeCursor() []input.Token
 ```
 
-#### func (Model[T]) AllValues
+#### func (Model[T]) AllValues() {#AllValues}
 
 ```go
 func (m Model[T]) AllValues() []string
 ```
 
-#### func (Model[T]) AllValuesBeforeCursor
+#### func (Model[T]) AllValuesBeforeCursor() {#AllValuesBeforeCursor}
 
 ```go
 func (m Model[T]) AllValuesBeforeCursor() []string
 ```
 
-#### func (*Model[T]) ArgsBeforeCursor
+#### func (*Model[T]) ArgsBeforeCursor() {#ArgsBeforeCursor}
 
 ```go
 func (m *Model[T]) ArgsBeforeCursor() []string
 ```
 
-#### func (*Model[T]) Blur
+#### func (*Model[T]) Blur() {#Blur}
 
 ```go
 func (m *Model[T]) Blur()
 ```
 
-#### func (*Model[T]) CommandBeforeCursor
+#### func (*Model[T]) CommandBeforeCursor() {#CommandBeforeCursor}
 
 ```go
 func (m *Model[T]) CommandBeforeCursor() string
 ```
 
-#### func (Model[T]) CommandCompleted
+#### func (Model[T]) CommandCompleted() {#CommandCompleted}
 
 ```go
 func (m Model[T]) CommandCompleted() bool
 ```
 
-#### func (*Model[T]) CompletedArgsBeforeCursor
+#### func (*Model[T]) CompletedArgsBeforeCursor() {#CompletedArgsBeforeCursor}
 
 ```go
 func (m *Model[T]) CompletedArgsBeforeCursor() []string
 ```
 
-#### func (Model[T]) CurrentToken
+#### func (Model[T]) CurrentToken() {#CurrentToken}
 
 ```go
 func (m Model[T]) CurrentToken() string
 ```
 
-#### func (Model[T]) CurrentTokenBeforeCursor
+#### func (Model[T]) CurrentTokenBeforeCursor() {#CurrentTokenBeforeCursor}
 
 ```go
 func (m Model[T]) CurrentTokenBeforeCursor() string
 ```
 
-#### func (Model[T]) CurrentTokenBeforeCursorRoundDown
+#### func (Model[T]) CurrentTokenBeforeCursorRoundDown() {#CurrentTokenBeforeCursorRoundDown}
 
 ```go
 func (m Model[T]) CurrentTokenBeforeCursorRoundDown() string
 ```
 
-#### func (Model[T]) CurrentTokenPos
+#### func (Model[T]) CurrentTokenPos() {#CurrentTokenPos}
 
 ```go
 func (m Model[T]) CurrentTokenPos() TokenPos
 ```
 
-#### func (Model[T]) CurrentTokenPosRoundDown
+#### func (Model[T]) CurrentTokenPosRoundDown() {#CurrentTokenPosRoundDown}
 
 ```go
 func (m Model[T]) CurrentTokenPosRoundDown() TokenPos
 ```
 
-#### func (Model[T]) CurrentTokenRoundDown
+#### func (Model[T]) CurrentTokenRoundDown() {#CurrentTokenRoundDown}
 
 ```go
 func (m Model[T]) CurrentTokenRoundDown() string
 ```
 
-#### func (Model[T]) CursorIndex
+#### func (Model[T]) CursorIndex() {#CursorIndex}
 
 ```go
 func (m Model[T]) CursorIndex() int
 ```
 
-#### func (Model[T]) CursorOffset
+#### func (Model[T]) CursorOffset() {#CursorOffset}
 
 ```go
 func (m Model[T]) CursorOffset() int
 ```
 
-#### func (*Model[T]) FlagSuggestions
+#### func (*Model[T]) FlagSuggestions() {#FlagSuggestions}
 
 ```go
 func (m *Model[T]) FlagSuggestions(inputStr string, flags []FlagInput, suggestionFunc func(FlagInput) T) []input.Suggestion[T]
 ```
 
-#### func (*Model[T]) Focus
+#### func (*Model[T]) Focus() {#Focus}
 
 ```go
 func (m *Model[T]) Focus() tea.Cmd
 ```
 
-#### func (Model[T]) Focused
+#### func (Model[T]) Focused() {#Focused}
 
 ```go
 func (m Model[T]) Focused() bool
 ```
 
-#### func (Model[T]) Formatters
+#### func (Model[T]) Formatters() {#Formatters}
 
 ```go
 func (m Model[T]) Formatters() Formatters
 ```
 
-#### func (Model[T]) HasArgs
+#### func (Model[T]) HasArgs() {#HasArgs}
 
 ```go
 func (m Model[T]) HasArgs() bool
 ```
 
-#### func (*Model[T]) Init
+#### func (*Model[T]) Init() {#Init}
 
 ```go
 func (m *Model[T]) Init() tea.Cmd
 ```
 
-#### func (Model[T]) LastArg
+#### func (Model[T]) LastArg() {#LastArg}
 
 ```go
 func (m Model[T]) LastArg() *ident
 ```
 
-#### func (*Model[T]) NewFlagPlaceholder
+#### func (*Model[T]) NewFlagPlaceholder() {#NewFlagPlaceholder}
 
 ```go
 func (m *Model[T]) NewFlagPlaceholder(placeholder string) FlagPlaceholder
 ```
 
-#### func (*Model[T]) NewPositionalArg
+#### func (*Model[T]) NewPositionalArg() {#NewPositionalArg}
 
 ```go
 func (m *Model[T]) NewPositionalArg(placeholder string) PositionalArg
 ```
 
-#### func (*Model[T]) NewPositionalArgs
+#### func (*Model[T]) NewPositionalArgs() {#NewPositionalArgs}
 
 ```go
 func (m *Model[T]) NewPositionalArgs(placeholders ...string) []PositionalArg
 ```
 
-#### func (*Model[T]) OnExecutorFinished
+#### func (*Model[T]) OnExecutorFinished() {#OnExecutorFinished}
 
 ```go
 func (m *Model[T]) OnExecutorFinished()
 ```
 
-#### func (*Model[T]) OnSuggestionChanged
+#### func (*Model[T]) OnSuggestionChanged() {#OnSuggestionChanged}
 
 ```go
 func (m *Model[T]) OnSuggestionChanged(suggestion input.Suggestion[T])
 ```
 
-#### func (*Model[T]) OnSuggestionUnselected
+#### func (*Model[T]) OnSuggestionUnselected() {#OnSuggestionUnselected}
 
 ```go
 func (m *Model[T]) OnSuggestionUnselected()
 ```
 
-#### func (*Model[T]) OnUpdateFinish
+#### func (*Model[T]) OnUpdateFinish() {#OnUpdateFinish}
 
 ```go
 func (m *Model[T]) OnUpdateFinish(msg tea.Msg, suggestion *input.Suggestion[T], isSelected bool) tea.Cmd
 ```
 
-#### func (*Model[T]) OnUpdateStart
+#### func (*Model[T]) OnUpdateStart() {#OnUpdateStart}
 
 ```go
 func (m *Model[T]) OnUpdateStart(msg tea.Msg) tea.Cmd
 ```
 
-#### func (*Model[T]) ParsedValue
+#### func (*Model[T]) ParsedValue() {#ParsedValue}
 
 ```go
 func (m *Model[T]) ParsedValue() Statement
 ```
 
-#### func (*Model[T]) Prompt
+#### func (*Model[T]) Prompt() {#Prompt}
 
 ```go
 func (m *Model[T]) Prompt() string
 ```
 
-#### func (*Model[T]) ResetValue
+#### func (*Model[T]) ResetValue() {#ResetValue}
 
 ```go
 func (m *Model[T]) ResetValue()
 ```
 
-#### func (*Model[T]) Runes
+#### func (*Model[T]) Runes() {#Runes}
 
 ```go
 func (m *Model[T]) Runes() []rune
 ```
 
-#### func (*Model[T]) SetCursor
+#### func (*Model[T]) SetCursor() {#SetCursor}
 
 ```go
 func (m *Model[T]) SetCursor(pos int)
 ```
 
-#### func (*Model[T]) SetCursorMode
+#### func (*Model[T]) SetCursorMode() {#SetCursorMode}
 
 ```go
 func (m *Model[T]) SetCursorMode(cursorMode textinput.CursorMode) tea.Cmd
 ```
 
-#### func (*Model[T]) SetFormatters
+#### func (*Model[T]) SetFormatters() {#SetFormatters}
 
 ```go
 func (m *Model[T]) SetFormatters(formatters Formatters)
 ```
 
-#### func (*Model[T]) SetPrompt
+#### func (*Model[T]) SetPrompt() {#SetPrompt}
 
 ```go
 func (m *Model[T]) SetPrompt(prompt string)
 ```
 
-#### func (*Model[T]) SetValue
+#### func (*Model[T]) SetValue() {#SetValue}
 
 ```go
 func (m *Model[T]) SetValue(s string)
 ```
 
-#### func (*Model[T]) ShouldClearSuggestions
+#### func (*Model[T]) ShouldClearSuggestions() {#ShouldClearSuggestions}
 
 ```go
 func (m *Model[T]) ShouldClearSuggestions(prevText []rune, msg tea.KeyMsg) bool
 ```
 
-#### func (*Model[T]) ShouldSelectSuggestion
+#### func (*Model[T]) ShouldSelectSuggestion() {#ShouldSelectSuggestion}
 
 ```go
 func (m *Model[T]) ShouldSelectSuggestion(suggestion input.Suggestion[T]) bool
 ```
 
-#### func (*Model[T]) ShouldUnselectSuggestion
+#### func (*Model[T]) ShouldUnselectSuggestion() {#ShouldUnselectSuggestion}
 
 ```go
 func (m *Model[T]) ShouldUnselectSuggestion(prevRunes []rune, msg tea.KeyMsg) bool
 ```
 
-#### func (*Model[T]) SuggestionRunes
+#### func (*Model[T]) SuggestionRunes() {#SuggestionRunes}
 
 ```go
 func (m *Model[T]) SuggestionRunes(runes []rune) []rune
 ```
 
-#### func (Model[T]) Tokens
+#### func (Model[T]) Tokens() {#Tokens}
 
 ```go
 func (m Model[T]) Tokens() []input.Token
 ```
 
-#### func (*Model[T]) Value
+#### func (*Model[T]) Value() {#Value}
 
 ```go
 func (m *Model[T]) Value() string
 ```
 
-#### func (Model[T]) View
+#### func (Model[T]) View() {#View}
 
 ```go
 func (m Model[T]) View(viewMode input.ViewMode) string
 ```
 
-#### type Option
+#### type Option() {#Option}
 
 ```go
 type Option[T CmdMetadataAccessor] func(model *Model[T]) error
 ```
 
 
-#### func  WithCursorMode
+#### func WithCursorMode() {#WithCursorMode}
 
 ```go
 func WithCursorMode[T CmdMetadataAccessor](cursorMode textinput.CursorMode) Option[T]
 ```
 
-#### func  WithDefaultDelimiter
+#### func WithDefaultDelimiter() {#WithDefaultDelimiter}
 
 ```go
 func WithDefaultDelimiter[T CmdMetadataAccessor](defaultDelimiter string) Option[T]
 ```
 
-#### func  WithFormatters
+#### func WithFormatters() {#WithFormatters}
 
 ```go
 func WithFormatters[T CmdMetadataAccessor](formatters Formatters) Option[T]
 ```
 
-#### func  WithPrompt
+#### func WithPrompt() {#WithPrompt}
 
 ```go
 func WithPrompt[T CmdMetadataAccessor](prompt string) Option[T]
 ```
 
-#### type PositionalArg
+#### type PositionalArg() {#PositionalArg}
 
 ```go
 type PositionalArg struct {
@@ -526,13 +551,13 @@ type PositionalArg struct {
 ```
 
 
-#### func (PositionalArg) Placeholder
+#### func (PositionalArg) Placeholder() {#Placeholder}
 
 ```go
 func (p PositionalArg) Placeholder() string
 ```
 
-#### type PositionalArgFormatter
+#### type PositionalArgFormatter() {#PositionalArgFormatter}
 
 ```go
 type PositionalArgFormatter struct {
@@ -542,14 +567,14 @@ type PositionalArgFormatter struct {
 ```
 
 
-#### type RoundingBehavior
+#### type RoundingBehavior() {#RoundingBehavior}
 
 ```go
 type RoundingBehavior int
 ```
 
 
-#### type Statement
+#### type Statement() {#Statement}
 
 ```go
 type Statement struct {
@@ -561,7 +586,7 @@ type Statement struct {
 ```
 
 
-#### type TokenPos
+#### type TokenPos() {#TokenPos}
 
 ```go
 type TokenPos struct {
@@ -572,7 +597,7 @@ type TokenPos struct {
 ```
 
 
-#### type TokenValue
+#### type TokenValue() {#TokenValue}
 
 ```go
 type TokenValue struct {
@@ -580,13 +605,13 @@ type TokenValue struct {
 ```
 
 
-#### func (TokenValue) RawValue
+#### func (TokenValue) RawValue() {#RawValue}
 
 ```go
 func (t TokenValue) RawValue() string
 ```
 
-#### func (TokenValue) Value
+#### func (TokenValue) Value() {#Value}
 
 ```go
 func (t TokenValue) Value() string
